18/12/15 Julien Dutheil
* SequenceStatistics can now write in compressed file.

10/12/15 Julien Dutheil
* Added PLINK export filter.

22/11/15 Julien Dutheil
* Fixed bug in FeatureFilter in case two features are exactly consecutive.

20/10/15 Julien Dutheil
* Added Tajima's pi to diversity statistics.

13/01/15 Julien Dutheil
* More options for OutputAlignments (output file names).

09/01/15 Julien Dutheil
* Add formatting options (sequence names) for trees and distance matrices.
* ML parameter estimation outputs parameter names in terminal.

26/09/14 -*- Version 1.1.0 -*-

05/04/14 Julien Dutheil
* Added ML model fit (stationary and non-stationary).

25/07/13 -*- Version 1.0.0 -*-

15/01/2010 Julien Dutheil
* Initial version.